Added permissions configuration for newly created AIPs